CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

10 October 2007
+ PageSmith and Web Page conversions remove the old menu suffixes.
+ Added note to freecap CAPTCHA
+ Added random number to open_window window title to allow multiple
  popups.


Version 1.6.3
-------------------------------------------------------------------
4 October 2007
+ Updated Pear DB class.
+ Added modifier to query function that disables table prefixing.
+ Fixed renameTableColumn double prefixing bug.

3 October 2007
+ Renamed registered column in registered table to
  registered_to. Columns with the same name as the table don't work
  with table prefixing. Changed in update.php.
+ Added logDB to the 'assoc' select option.
+ Changed the prefix search to try and prevent incorrect prefixing on
  column names.
+ Added short document on database rules.

2 October 2007
+ More changes to File.php. Separated the resizeImage function from
  the cropping. Now have three functions: scaleImage, cropPercent, and
  cropImage. 

1 October 2007
+ Added getGraph function to Batch
+ Updated: templates/graph.tpl, img/ajax-loader.gif

29 September 2007
+ Bug fix on _indexBy function. stacked variable wasn't getting set.

28 September 2007
+ Added createPrimaryKey function.
+ Added define to Debug - DEITY_ONLY_TEST. If true, the test will only
  echo if the user is a deity. This can help if you need to debug on a
  live site.
+ Added Dang and moved translators to their own section.


24 September 2007
+ added getHomeDir function to Convert class to help with branch
  conversions.

21 September 2007
+ Added a no overwrite option to copy_directory function.
+ Added a chmod command to the copy_directory function.
+ Adding a check for the language.php file in setup as well as the
  existance of the config/core/ directory.
+ Changed allowView function in Key. Before the change, any user with